workloads/grocy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  labels:
    app: grocy
spec:
  type: ClusterIP
  selector:
    app: grocy
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
