workloads/grocy/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grocy
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: grocy-ts-2143-https
  hostnames:
    - grocy.ts.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grocy
          port: 80
